Ready for prime